--- a/style.css
+++ b/style.css
@@ -192,5 +192,6 @@ div option {
 
 .grid {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-gap: 5px;
 }
